# faceverification

documentfaceverify/face/: .dockerignore  .env.example  KYC_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
documentfaceverify/face/aav/: __init__.py  main.py  settings.py
documentfaceverify/face/aav/core/: logging.py  metrics.py  security.py
documentfaceverify/face/aav/pipeline/: documents.py  liveness.py  parsers.py  verify.py
documentfaceverify/face/aav/storage/: sessions.py
documentfaceverify/face/aav/web/static/: index.html
documentfaceverify/face/tests/: test_aadhaar.py  test_liveness.py  test_parsers.py  test_sessions.py  test_verify_pct.py
face/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
face/.github/workflows/: ci.yml
face/aav/: main.py  settings.py
face/aav/core/: audit.py  errors.py  logging.py  security.py
face/aav/pipeline/: aadhaar.py  documents.py  face_engine.py  parsers.py  verify.py
face/aav/web/static/: index.html
face/scripts/: download_models.py
face/tests/: conftest.py  test_app_smoke.py  test_documents.py  test_parsers.py  test_security.py  test_verify.py  test_verify_pct.py
